# IntelliegntControllerHC

./: .gitignore  .gitmodules  README.md  copy_lhand.sh  install _lhand.bash  install.bash  install_lhand.bash  install_orbbec_env.bash  install_ros2.bash  install_rosdep.sh  install_ui_app.bash  launch.sh  run_glove_system.sh
docs/: 上位机三部分控制架构说明.md
docs/Duco/: 机器人链接.md
docs/LHand/: README_Lhand.md
docs/Orbbec/1. 概述/: 1.1 Orbberc SDK 概述.md
docs/Orbbec/3. 快速开始/: 3.1. ROS 包快速入门.md
docs/Orbbec/4. 应用指南/: 4.1 启动参数.md  4.2. 可用服务.md  4.3. 可用话题.md  4.4. 坐标系和 TF 变换.md  4.5. 压缩图像.md  4.6. 在ROS 2中启用和可视化点云.md
docs/Orbbec/5. 高级指南/5.1. 性能与优化/: 5.1.1. 使用Orbbec ROS包降低CPU使用率.md  5.1.2. 高效的进程内通信.md
docs/Orbbec/5. 高级指南/5.2  多相机/: 5.2.1. 多相机.md  5.2.2. 多相机同步说明.md  5.2.3. 多相机同步验证节点.md  5.2.4. GMSL 相机.md
docs/Orbbec/5. 高级指南/5.3. 配置与模式/: 5.3.1. 对齐深度到彩色.md  5.3.2. 深度 NFOV 和 WFOV 模式配置.md  5.3.3. 深度工作模式切换.md  5.3.4. 视差搜索偏移.md  5.3.5. 在 Gemini330 系列相机中使用 interleave_ae.md  5.3.6. 设备预设.md  5.3.7. 网络相机.md
ros2_ws/: .gitignore  README.md  README_duco_driver.md  README_orbbec.md  lhand_chmod.bash  orbbec.repos
ros2_ws/src/: ros2_lhandpro.conf
ros2_ws/src/DH116_L_URDF/DH116-L000-A1/: CMakeLists.txt  package.xml
ros2_ws/src/DH116_L_URDF/DH116_L000_A1/: package.xml
ros2_ws/src/DH116_L_URDF/DH116_L000_A1/config/: joint_names_DH116-L000-A1.yaml
ros2_ws/src/DH116_L_URDF/DH116_L000_A1/launch/: display.launch  gazebo.launch
ros2_ws/src/DH116_L_URDF/DH116_L000_A1/meshes/: finger33_Link.STL
ros2_ws/src/DH116_L_URDF/DH116_L000_A1/urdf/: DH116-L000-A1.csv  DH116-L000-A1.urdf
ros2_ws/src/DH116_R_URDF/DH116-R000-A1/: CMakeLists.txt  package.xml
ros2_ws/src/DH116_R_URDF/DH116_R000_A1/: package.xml
ros2_ws/src/OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt
ros2_ws/src/common_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/common_msgs/msg/: GloveJoints.msg  HandCmd.msg
ros2_ws/src/double_arm_moveit_config/: .setup_assistant  package.xml
ros2_ws/src/double_arm_moveit_config/config/: double_arm.ros2_control.xacro  double_arm.srdf  double_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/double_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/duco_gcr10_1300_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr10_1300_moveit_config/config/: gcr10_1300.ros2_control.xacro  gcr10_1300.srdf  gcr10_1300.urdf.xacro  initial_positions.yaml
ros2_ws/src/duco_gcr10_1300_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/duco_gcr10_2000_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr10_2000_moveit_config/config/: gcr10_2000.ros2_control.xacro  gcr10_2000.srdf  gcr10_2000.urdf.xacro  initial_positions.yaml
ros2_ws/src/duco_gcr10_2000_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/duco_gcr12_1300_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr12_1300_moveit_config/config/: gcr12_1300.ros2_control.xacro  gcr12_1300.srdf  gcr12_1300.urdf.xacro  initial_positions.yaml  joint_limits.yaml
ros2_ws/src/duco_gcr12_1300_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/duco_gcr14_1400_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr14_1400_moveit_config/config/: gcr14_1400.ros2_control.xacro  gcr14_1400.srdf  (+2 more)
ros2_ws/src/duco_gcr16_2000_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr16_960_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr20_1100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr20_1400_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr25_1800_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr30_1100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr3_618_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_gcr7_910_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/duco_ros_driver/: CMakeLists.txt
ros2_ws/src/glove_node/: CMakeLists.txt  package.xml
ros2_ws/src/glove_node/include/: UDEServer.h
ros2_ws/src/glove_node/src/: UDEServer.cxx  glove_node.cpp
ros2_ws/src/lhandpro_interfaces/: CMakeLists.txt
ros2_ws/src/lhandpro_service/: CMakeLists.txt  package.xml
ros2_ws/src/logger_node/: CMakeLists.txt  package.xml
ros2_ws/src/logger_node/src/: logger_node.cpp
ros2_ws/src/robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/safe_duco_status/: CMakeLists.txt  package.xml
ros2_ws/src/safe_duco_status/src/: safe_duco_status_node.cpp
ros2_ws/src/system_controller/: CMakeLists.txt  package.xml
ros2_ws/src/system_controller/launch/: system_startup.launch.py
ros2_ws/src/system_controller/src/: system_controller_node.cpp
ros2_ws/src/ui_app/: CMakeLists.txt  package.xml
ros2_ws/src/ui_app/config/: ui_params.yaml
ros2_ws/src/ui_app/include/ui_app/: app_window.hpp  point_cloud_widget.hpp  robot_viz_widget.hpp  ros_node.hpp
ros2_ws/src/ui_app/launch/: unified.launch.py
ros2_ws/src/ui_app/resources/: style.qss
ros2_ws/src/ui_app/src/: app_window.cpp  main.cpp  point_cloud_widget.cpp  robot_viz_widget.cpp  ros_node.cpp
ros2_ws/src/vision_server/: CMakeLists.txt  package.xml
(+122 files in other folders)
