<?xml version="1.0"?>
<package format="3">
  <name>common_msgs</name>
  <version>0.1.0</version>
  <description>Common interfaces for the industrial control system</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>Apache-2.0</license>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
