cmake_minimum_required(VERSION 3.10)
project(logger_node)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(common_msgs REQUIRED)
add_executable(logger_node src/logger_node.cpp)
ament_target_dependencies(logger_node rclcpp sensor_msgs common_msgs)
target_compile_features(logger_node PRIVATE cxx_std_17)
install(TARGETS logger_node DESTINATION lib/${PROJECT_NAME})
ament_package()
