<?xml version="1.0"?>
<package format="3">
  <name>logger_node</name>
  <version>0.1.0</version>
  <description>CSV logger for industrial system</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>common_msgs</depend>
</package>
