<?xml version="1.0"?>
<package format="3">
  <name>ui_app</name>
  <version>0.1.0</version>
  <description>Qt UI for industrial control system</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>duco_msg</depend>
  <depend>common_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>vision_server</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt3d5-dev</depend>
  <depend>lhandpro_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
