<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>DH116-L000-A1</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for DH116-L000-A1
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
